[package]
description = "Supporting library for git-branchless"
edition = "2021"
license = "GPL-2.0-only"
name = "git-branchless-submit"
repository = "https://github.com/arxanas/git-branchless"
version = "0.7.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive_core = "0.3.6"
eyre = "0.6.8"
git-branchless-invoke = { version = "0.7.1", path = "../git-branchless-invoke" }
git-branchless-opts = { version = "0.7.1", path = "../git-branchless-opts" }
git-branchless-revset = { version = "0.7.1", path = "../git-branchless-revset" }
itertools = "0.10.5"
lazy_static = "1.4.0"
lib = { package = "git-branchless-lib", version = "0.7.1", path = "../git-branchless-lib" }

[dev-dependencies]
git-branchless-testing = { version = "0.7.1", path = "../git-branchless-testing" }
insta = "1.28.0"


