[package]
description = "Supporting library for git-branchless"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "git-branchless-submit"
repository = "https://github.com/arxanas/git-branchless"
version = "0.7.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive_core = "0.3.6"
eden_dag = { package = "esl01-dag", version = "0.2.1" }
eyre = "0.6.8"
git-branchless-invoke = { version = "0.7.0", path = "../git-branchless-invoke" }
git-branchless-opts = { version = "0.7.0", path = "../git-branchless-opts" }
git-branchless-revset = { version = "0.7.0", path = "../git-branchless-revset" }
git-branchless-test = { version = "0.7.0", path = "../git-branchless-test" }
itertools = "0.11.0"
lazy_static = "1.4.0"
lib = { package = "git-branchless-lib", version = "0.7.0", path = "../git-branchless-lib" }
rayon = "1.7.0"
regex = "1.9.1"
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.100"
thiserror = "1.0.40"
tracing = "0.1.37"

[dev-dependencies]
clap = { version = "4.3.11", features = ["derive"] }
git-branchless-testing = { version = "0.7.0", path = "../git-branchless-testing" }
insta = "1.30.0"
