[package]
description = "Supporting library for git-branchless"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "git-branchless-submit"
repository = "https://github.com/arxanas/git-branchless"
version = "0.8.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive_core = { workspace = true }
eden_dag = { workspace = true }
eyre = { workspace = true }
git-branchless-invoke = { workspace = true }
git-branchless-opts = { workspace = true }
git-branchless-revset = { workspace = true }
git-branchless-test = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
lib = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
clap = { workspace = true }
insta = { workspace = true }
