[package]
edition = "2021"
name = "git-branchless-test"
version = "0.7.0-pre.1"

[dependencies]
bstr = "1.2.0"
clap = "4.0.23"
crossbeam = "0.8.2"
cursive = { version = "0.20.0", default-features = false, features = [
  "crossterm-backend",
] }
eden_dag = { package = "esl01-dag", version = "0.2.1" }
eyre = "0.6.8"
fslock = "0.2.1"
git-branchless-invoke = { version = "0.7.0-pre.1", path = "../git-branchless-invoke" }
git-branchless-opts = { version = "0.7.0-pre.1", path = "../git-branchless-opts" }
git-branchless-revset = { version = "0.7.0-pre.1", path = "../git-branchless-revset" }
indexmap = "1.9.2"
itertools = "0.10.5"
lazy_static = "1.4.0"
lib = { package = "git-branchless-lib", version = "0.7.0-pre.1", path = "../git-branchless-lib" }
num_cpus = "1.14.0"
rayon = "1.6.1"
scm-bisect = { version = "0.1.0", path = "../scm-bisect" }
serde = { version = "1.0.150", features = ["serde_derive", "derive"] }
serde_json = "1.0.92"
thiserror = "1.0.38"
tracing = "0.1.37"

[dev-dependencies]
assert_cmd = "2.0.7"
insta = "1.23.0"
maplit = "1.0.2"
