[package]
description = "Supporting library for git-branchless"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "git-branchless-test"
repository = "https://github.com/arxanas/git-branchless"
version = "0.7.0"

[dependencies]
bstr = "1.5.0"
clap = "4.3.4"
crossbeam = "0.8.2"
cursive = { version = "0.20.0", default-features = false, features = [
  "crossterm-backend",
] }
eden_dag = { package = "esl01-dag", version = "0.3.0" }
eyre = "0.6.8"
fslock = "0.2.1"
git-branchless-invoke = { version = "0.7.0", path = "../git-branchless-invoke" }
git-branchless-opts = { version = "0.7.0", path = "../git-branchless-opts" }
git-branchless-revset = { version = "0.7.0", path = "../git-branchless-revset" }
indexmap = "1.9.3"
itertools = "0.10.5"
lazy_static = "1.4.0"
lib = { package = "git-branchless-lib", version = "0.7.0", path = "../git-branchless-lib" }
num_cpus = "1.14.0"
rayon = "1.7.0"
scm-bisect = { version = "0.1.0", path = "../scm-bisect" }
serde = { version = "1.0.163", features = ["serde_derive", "derive"] }
serde_json = "1.0.97"
tempfile = "3.6.0"
thiserror = "1.0.40"
tracing = "0.1.37"

[dev-dependencies]
assert_cmd = "2.0.7"
git-branchless-testing = { version = "0.7.0", path = "../git-branchless-testing" }
insta = "1.29.0"
maplit = "1.0.2"
