[package]
description = "Supporting library for git-branchless"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "git-branchless-test"
repository = "https://github.com/arxanas/git-branchless"
version = "0.9.0"

[dependencies]
bstr = { workspace = true }
clap = { workspace = true }
crossbeam = { workspace = true }
eden_dag = { workspace = true }
eyre = { workspace = true }
fslock = { workspace = true }
git-branchless-invoke = { workspace = true }
git-branchless-opts = { workspace = true }
git-branchless-revset = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
lib = { workspace = true }
num_cpus = { workspace = true }
rayon = { workspace = true }
scm-bisect = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
insta = { workspace = true }
maplit = { workspace = true }
