[package]
name = "git-branchless-testing"
version = "0.7.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
assert_cmd = "2.0.12"
color-eyre = "0.6.2"
eyre = "0.6.8"
itertools = "0.11.0"
lazy_static = "1.4.0"
lib = { package = "git-branchless-lib", version = "0.7.0", path = "../git-branchless-lib" }
once_cell = "1.18.0"
portable-pty = "0.8.1"
regex = "1.9.1"
tempfile = "3.6.0"
tracing = "0.1.37"
vt100 = "0.15.2"
