[package]
name = "git-branchless-testing"
version = "0.7.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
assert_cmd = { workspace = true }
color-eyre = { workspace = true }
eyre = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
lib = { workspace = true }
once_cell = { workspace = true }
portable-pty = { workspace = true }
regex = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }
vt100 = { workspace = true }
