[package]
description = "Supporting library for git-branchless"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "git-branchless-undo"
repository = "https://github.com/arxanas/git-branchless"
version = "0.7.0"

[dependencies]
cursive = { version = "0.20.0", default-features = false, features = [
  "crossterm-backend",
] }
eyre = "0.6.8"
lib = { package = "git-branchless-lib", version = "0.7.0", path = "../git-branchless-lib" }
git-branchless-revset = { version = "0.7.0", path = "../git-branchless-revset" }
git-branchless-smartlog = { version = "0.7.0", path = "../git-branchless-smartlog" }
tracing = "0.1.37"
cursive_buffered_backend = "0.6.1"
git-record = { version = "0.3.0", path = "../git-record" }
cursive_core = "0.3.5"

[dev-dependencies]
insta = "1.29.0"
