[package]
description = "Supporting library for git-branchless"
edition = "2024"
license = "MIT OR Apache-2.0"
name = "git-branchless-undo"
repository = "https://github.com/arxanas/git-branchless"
version = "0.10.0"

[dependencies]
cursive = { workspace = true }
eyre = { workspace = true }
lib = { workspace = true }
git-branchless-revset = { workspace = true }
git-branchless-smartlog = { workspace = true }
tracing = { workspace = true }
cursive_buffered_backend = { workspace = true }
cursive_core = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
