[package]
authors = ["Waleed Khan <me@waleedkhan.name>"]
categories = ["command-line-utilities", "development-tools"]
default-run = "git-branchless"
description = "Branchless workflow for Git"
documentation = "https://github.com/arxanas/git-branchless/wiki"
edition = "2018"
homepage = "https://github.com/arxanas/git-branchless"
keywords = ["cli", "git"]
license = "GPL-2.0-only"
name = "git-branchless"
readme = "../README.md"
repository = "https://github.com/arxanas/git-branchless"
rust-version = "1.61.0"
version = "0.7.0-rc.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bstr = "1.2.0"
bugreport = "0.5.0"
color-eyre = "0.6.2"
console = "0.15.5"
cursive_core = "0.3.7"
eden_dag = { package = "esl01-dag", version = "0.2.1" }
eyre = "0.6.8"
fslock = "0.2.1"
git-branchless-hook = { version = "0.7.0-rc.1", path = "../git-branchless-hook" }
git-branchless-init = { version = "0.7.0-rc.1", path = "../git-branchless-init" }
git-branchless-invoke = { version = "0.7.0-rc.1", path = "../git-branchless-invoke" }
git-branchless-move = { version = "0.7.0-rc.1", path = "../git-branchless-move" }
git-branchless-navigation = { version = "0.7.0-rc.1", path = "../git-branchless-navigation" }
git-branchless-opts = { version = "0.7.0-rc.1", path = "../git-branchless-opts" }
git-branchless-query = { version = "0.7.0-rc.1", path = "../git-branchless-query" }
git-branchless-record = { version = "0.7.0-rc.1", path = "../git-branchless-record" }
git-branchless-revset = { version = "0.7.0-rc.1", path = "../git-branchless-revset" }
git-branchless-reword = { version = "0.7.0-rc.1", path = "../git-branchless-reword" }
git-branchless-smartlog = { version = "0.7.0-rc.1", path = "../git-branchless-smartlog" }
git-branchless-submit = { version = "0.7.0-rc.1", path = "../git-branchless-submit" }
git-branchless-test = { version = "0.7.0-rc.1", path = "../git-branchless-test" }
git-branchless-undo = { version = "0.7.0-rc.1", path = "../git-branchless-undo" }
git-record = { version = "0.3", path = "../git-record" }
itertools = "0.10.5"
lazy_static = "1.4.0"
lib = { package = "git-branchless-lib", version = "0.7.0-rc.1", path = "../git-branchless-lib" }
man = "0.3.0"
num_cpus = "1.13.1"
once_cell = "1.17.0"
path-slash = "0.2.1"
rayon = "1.6.1"
regex = "1.7.1"
rusqlite = { version = "0.28.0", features = ["bundled"] }
thiserror = "1.0.34"
tracing = "0.1.37"
tracing-chrome = "0.6.0"
tracing-error = "0.2.0"
tracing-subscriber = { version = "=0.3.11", features = ["env-filter"] }

[dev-dependencies]
anyhow = "1.0.69"
assert_cmd = "2.0.7"
insta = "1.24.1"
portable-pty = "0.7.0"
vt100 = "0.15.2"

[package.metadata.release]
pre-release-replacements = [
  { file = "../CHANGELOG.md", search = "Unreleased", replace = "{{version}}", min = 1 },
  { file = "../CHANGELOG.md", search = "ReleaseDate", replace = "{{date}}", min = 1 },
  { file = "../CHANGELOG.md", search = "<!-- next-header -->", replace = "<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly = 1 },
]

[[test]]
name = "test_amend"

[[test]]
name = "test_branchless"

[[test]]
name = "test_bug_report"

[[test]]
name = "test_eventlog"

[[test]]
name = "test_gc"

[[test]]
name = "test_hide"

[[test]]
name = "test_hooks"

[[test]]
name = "test_init"

[[test]]
name = "test_move"

[[test]]
name = "test_navigation"

[[test]]
name = "test_record"

[[test]]
name = "test_repair"

[[test]]
name = "test_restack"

[[test]]
name = "test_reword"

[[test]]
name = "test_snapshot"

[[test]]
name = "test_sync"

[[test]]
name = "test_undo"

[[test]]
name = "test_wrap"



