[package]
authors = ["Waleed Khan <me@waleedkhan.name>"]
categories = ["command-line-utilities", "development-tools"]
default-run = "git-branchless"
description = "Branchless workflow for Git"
documentation = "https://github.com/arxanas/git-branchless/wiki"
edition = "2021"
homepage = "https://github.com/arxanas/git-branchless"
keywords = ["cli", "git"]
license = "MIT OR Apache-2.0"
name = "git-branchless"
readme = "../README.md"
repository = "https://github.com/arxanas/git-branchless"
rust-version = "1.82"
version = "0.10.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bstr = { workspace = true }
bugreport = { workspace = true }
color-eyre = { workspace = true }
console = { workspace = true }
cursive_core = { workspace = true }
eden_dag = { workspace = true }
eyre = { workspace = true }
fslock = { workspace = true }
git-branchless-hook = { workspace = true }
git-branchless-init = { workspace = true }
git-branchless-invoke = { workspace = true }
git-branchless-move = { workspace = true }
git-branchless-navigation = { workspace = true }
git-branchless-opts = { workspace = true }
git-branchless-query = { workspace = true }
git-branchless-record = { workspace = true }
git-branchless-revset = { workspace = true }
git-branchless-reword = { workspace = true }
git-branchless-smartlog = { workspace = true }
git-branchless-submit = { workspace = true }
git-branchless-test = { workspace = true }
git-branchless-undo = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
lib = { workspace = true }
man = { workspace = true }
num_cpus = { workspace = true }
once_cell = { workspace = true }
path-slash = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
rusqlite = { workspace = true }
scm-diff-editor = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-chrome = { workspace = true }
tracing-error = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
insta = { workspace = true }

[features]
man-pages = []

[package.metadata.release]
pre-release-replacements = [
  { file = "../CHANGELOG.md", search = "Unreleased", replace = "{{version}}", min = 1 },
  { file = "../CHANGELOG.md", search = "ReleaseDate", replace = "{{date}}", min = 1 },
  { file = "../CHANGELOG.md", search = "<!-- next-header -->", replace = "<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly = 1 },
]

[[test]]
name = "test_amend"

[[test]]
name = "test_branchless"

[[test]]
name = "test_bug_report"

[[test]]
name = "test_eventlog"

[[test]]
name = "test_gc"

[[test]]
name = "test_hide"

[[test]]
name = "test_hooks"

[[test]]
name = "test_init"

[[test]]
name = "test_move"

[[test]]
name = "test_navigation"

[[test]]
name = "test_repair"

[[test]]
name = "test_restack"

[[test]]
name = "test_reword"

[[test]]
name = "test_snapshot"

[[test]]
name = "test_sync"

[[test]]
name = "test_undo"

[[test]]
name = "test_wrap"
