[package]
authors = ["Waleed Khan <me@waleedkhan.name>"]
description = "UI component to interactively select changes to include in a commit."
edition = "2021"
keywords = ["git"]
license = "MIT OR Apache-2.0"
name = "git-record"
repository = "https://github.com/arxanas/git-branchless"
rust-version = "1.56.0"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = { version = "0.18.0", default-features = false, features = [
  "crossterm-backend",
] }
cursive_buffered_backend = "0.6.0"
tracing = "0.1.34"

[dev-dependencies]
eyre = "0.6.8"
insta = "1.15.0"
