[package]
authors = ["Waleed Khan <me@waleedkhan.name>"]
description = "UI component to interactively select changes to include in a commit."
edition = "2021"
keywords = ["git"]
license = "MIT OR Apache-2.0"
name = "git-record"
repository = "https://github.com/arxanas/git-branchless"
rust-version = "1.67.0"
version = "0.4.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "benches"
harness = false

[dependencies]
cursive = { workspace = true }
cursive_buffered_backend = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
eyre = { workspace = true }
insta = { workspace = true }
