[package]
description = "Supporting library for git-branchless"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "scm-bisect"
repository = "https://github.com/arxanas/git-branchless"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "2"
itertools = "0.12"
thiserror = "1"
tracing = "0.1"

[dev-dependencies]
insta = "1"
maplit = "1"
proptest = "1.4.0"
