[package]
description = "Supporting library for git-branchless"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "scm-bisect"
repository = "https://github.com/arxanas/git-branchless"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "2"
itertools = "0.13"
rpds = "~1.0"  # 1.1 produces: `use of unstable library feature 'pointer_byte_offsets'`
thiserror = "1"
tracing = "0.1"

[dev-dependencies]
insta = "1"
maplit = "1"
proptest = "1.5.0"
