[package]
description = "Supporting library for git-branchless"
edition = "2024"
license = "MIT OR Apache-2.0"
name = "scm-bisect"
repository = "https://github.com/arxanas/git-branchless"
version = "0.3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "2"
itertools = "0.14"
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
insta = "1"
maplit = "1"
proptest = "1.10.0"
