[package]
authors = ["Waleed Khan <me@waleedkhan.name>"]
description = "UI component to interactively select changes to include in a commit."
edition = "2021"
license = "MIT OR Apache-2.0"
name = "scm-record"
repository = "https://github.com/arxanas/git-branchless"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debug = ["serde"]
default = ["debug"]
scm-diff-editor = ["clap", "diffy", "sha1", "walkdir"]
serde = ["dep:serde", "dep:serde_json"]

[dependencies]
cassowary = "0.3"
crossterm = "0.26"
num-traits = "0.2"
serde = { version = "1.0", features = ["serde_derive"], optional = true }
serde_json = { version = "1.0", optional = true }
thiserror = "1.0"
tracing = "0.1"
ratatui = "0.22.0"
unicode-width = "0.1"

clap = { version = "4.4", features = ["derive"], optional = true }
diffy = { version = "0.3", optional = true }
sha1 = { version = "0.10", optional = true }
walkdir = { version = "2.3", optional = true }

[dev-dependencies]
assert_matches = "1.5"
criterion = "0.5"
eyre = "0.6"
insta = "1.31"
maplit = "1.0"

[[bin]]
name = "scm-diff-editor"
required-features = ["scm-diff-editor"]

[[bench]]
name = "benches"
harness = false
